# cpp_dhbw_students

./: .gitignore  README.md  coding_guidelines.md
1_Grundlagen_Cpp/11_hello_world/: HELLO_WORLD.md  hello_world.cpp
1_Grundlagen_Cpp/12_Wiederholung_C/prim/: prim.cpp
1_Grundlagen_Cpp/12_Wiederholung_C/square/: square.cpp
1_Grundlagen_Cpp/12_Wiederholung_C/sum/: sum.cpp
1_Grundlagen_Cpp/12_Wiederholung_C/test_float/: test_float.cpp
1_Grundlagen_Cpp/12_Wiederholung_C/test_int/: test_integer.cpp
1_Grundlagen_Cpp/1_hello_world/: hello_world.cpp
1_Grundlagen_Cpp/1_hello_world/tmp/: hello_world.cpp
1_Grundlagen_Cpp/2_Wiederholung_C/fib/: fib.cpp
1_Grundlagen_Cpp/2_Wiederholung_C/prim/: prim.cpp
1_Grundlagen_Cpp/2_Wiederholung_C/test_float/: test_float.cpp
2_Objektorientierung/21_Grundlagen/213_initialization_list/: initialization_lists.cpp
2_Objektorientierung/21_Grundlagen/213_initialization_list_extended/: initialization_lists.cpp
2_Objektorientierung/21_Grundlagen/214_overload/: overload.cpp
2_Objektorientierung/21_Grundlagen/215_VehicleV2_header/: main.cpp  vehicle2.cpp  vehicle2.hpp
2_Objektorientierung/22_Vererbung/221_Einführung/: INHERITANCE_SHAPE_RECTANGLE.md  UML_EINFUEHRUNG.md  inheritance_intro.cpp
2_Objektorientierung/22_Vererbung/222_task_person_professor_student/: MailHandler.cpp  MailHandler.hpp  Person.cpp  Person.hpp  Professor.cpp  Professor.hpp  Student.cpp  Student.hpp  main.cpp
2_Objektorientierung/25_SOLID_Design_Principles/: SOLID_Principles.md
2_Objektorientierung/Datenkapselung_Cpp_Beispiel/: move_vehicle_oop.cpp
2_Objektorientierung/Datenkapselung_Cpp_Konstruktor/: move_vehicle_oop_const.cpp
2_Objektorientierung/overload/: overload.cpp
3_Basics_und_Vertiefungen_Cpp/31_Vertiefung/: end_vs_endl.cpp
4_STL/42_Iteratoren/: iteratoren_main.cpp
4_STL/43_sort/: sort_main.cpp
4_STL/44_templates/: templates_main.cpp
5_Clean_Code/52_assert/: assert_main.cpp
5_Clean_Code/53_Clean_Code/: Clean_Code_Examples.md
7_exkurs_CMake_example/71_cmake_hello_world_starter_code/: README.md  printHelloWorld.cpp  printHelloWorld.h
7_exkurs_CMake_example/72_cmake_hello_world/: CMakeLists.txt  README.md
7_exkurs_CMake_example/72_cmake_hello_world/app/: main.cpp
7_exkurs_CMake_example/73_cmake_task_vehicle_driver_starter_code/: vehicle.cpp
7_exkurs_CMake_example/74_cmake_task_vehicle_driver/: CMakeLists.txt
9_Test_Driven_Development/: Overview_GoogleTest_Asserts.md
9_Test_Driven_Development/92_IsPalindrom/: CMakeLists.txt
9_Test_Driven_Development/93_Bowling_Kata/: CMakeLists.txt
9_Test_Driven_Development/93_Bowling_Kata/test/: gameTest.cpp
9_Test_Driven_Development/94_MockingGreeter/: CMakeLists.txt  README.md  greeter_service.cpp  greeter_service.h  main.cpp  time_provider.cpp  time_provider.h
coding_projects/kitti_example_code/: Programmentwurf_Beispiele.cpp
coding_projects/vier_gewinnt/: CMakeLists.txt
coding_projects/vier_gewinnt/design/: .$vier_gewinnt_design.drawio.bkp  vier_gewinnt_design.drawio
coding_projects/vier_gewinnt/src/: main.cpp
coding_projects/vier_gewinnt/src/IO_classes/: gameManager.cpp  gameManager.hpp
coding_projects/vier_gewinnt/src/game_classes/: board.cpp  board.hpp  game.hpp  game.inl
coding_projects/vier_gewinnt/src/player_classes/: horizontalBot.cpp  horizontalBot.hpp  human.cpp  human.hpp  player.hpp  randomBot.cpp  randomBot.hpp
coding_projects/vier_gewinnt/src/utility/: parameter.hpp  playerType.hpp
(+81 files in other folders)
